# AiPi-SCBB

./: .gitignore  AGENTS.md  CMakeLists.txt  Kconfig  README.md  README_zh.md  menuconfig.py
.mimocode/: .cron-lock
CH224A/: axk_ch224.c  axk_ch224.h
HXD039B2/: axk_hxd039b2.c  axk_hxd039b2.h
SHT3x/: axk_sht3x.c  axk_sht3x.h
STM32F10x_bsp/delay/: CMakeLists.txt
STM32F10x_bsp/i2c/: CMakeLists.txt
STM32F10x_bsp/pwm_dma/: CMakeLists.txt  stm32f10x_pwm_dma.c  stm32f10x_pwm_dma.h
WS2812/: axk_ws2812.c  axk_ws2812.h
cmake/: kconfig.cmake
scripts/: gen_config_header.py  menuconfig.py
